@@ -1,3 +1,14 @@
+2004-05-07  Pat Thoyts  <patthoyts@users.sourceforge.net>
+
+	* doc/tkvideo.man: NEW: added initial doc file.
+	* generic/tkvideo.c: Added header to avoid MSVC warnings.
+	* win/winvideo.cpp: Minor bug fixes.
+	* win/makefile.vc: Added demo target.
+
+2004-05-06  Pat Thoyts  <patthoyts@users.sourceforge.net>
+
+	* all:  Created SVN repository at Berlios.de.
+
 2003-12-18  Pat Thoyts  <patthoyts@users.sourceforge.net>
 
 	* all:  Initial import of tkvideo widget.
